style contact buttons - fix search-wrapper

--- a/bokaaterkommande.html
+++ b/bokaaterkommande.html
@@ -49,10 +49,12 @@
             </nav>
         </div>
     </div>
-    <div class="search-wrapper vertical-center">
-        <label for="search">Sök</label>
-        <input type="text" id="search" name="search">
-        <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+    <div class="vertical-center">
+        <div class="search-wrapper">
+            <label for="search">Sök</label>
+            <input type="text" id="search" name="search">
+            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+        </div>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
@@ -161,17 +163,16 @@
                             <option value="3">3</option>
                         </select>
                     </div>
-                    </div>
-                    <div class="form-trip-other">
-                        <label for="trip-other">Övrig information:</label><br>
-                        <textarea id="trip-other" name="trip-other"
-                            placeholder="ex. bilbarnstol, ledarhund"></textarea>
-                        <p class="form-trip-other-info">Här kan du skriva mer information om du bokning tex om du har en
-                            medföljande ledarhund, att du önskar sitta fram i bilen eller annan viktigt information</p>
-                    </div>
-                    <div class="container-submit-trip">
-                        <a href="confirmbokaaterkommande.html" class="purple-button">Boka resor</a>
-                    </div>
+                </div>
+                <div class="form-trip-other">
+                    <label for="trip-other">Övrig information:</label><br>
+                    <textarea id="trip-other" name="trip-other" placeholder="ex. bilbarnstol, ledarhund"></textarea>
+                    <p class="form-trip-other-info">Här kan du skriva mer information om du bokning tex om du har en
+                        medföljande ledarhund, att du önskar sitta fram i bilen eller annan viktigt information</p>
+                </div>
+                <div class="container-submit-trip">
+                    <a href="confirmbokaaterkommande.html" class="purple-button">Boka resor</a>
+                </div>
             </section>
         </div>
     </main>
