--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,12 @@
             </nav>
         </div>
     </div>
-    <div class="search-wrapper vertical-center">
+    <div class="vertical-center">
+    <div class="search-wrapper">
         <label for="search">Sök</label>
         <input type="text" id="search" name="search">
         <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+    </div>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
@@ -66,11 +68,13 @@
                     Du kan också använda vårt <a href="contactform.html">kontaktformulär</a>.
                 </p>
             </section>
+            <div class="contact-buttons">
             <div class="container-call-button">
                 <a href="tel:08-1234567" class="blue-button"><span class="fa-solid fa-phone"></span> Ring oss</a>
             </div>
             <div class="container-email-button">
                 <a href="mailto:hali2507@student.miun.se" class="blue-button"><span class="fa-solid fa-envelope"></span> Maila oss</a>
+            </div>
             </div>
         </div>
     </main>
