--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             </nav>
         </div>
     </div>
-    <div class="search-wrapper vertical-center">
-        <label for="search">Sök</label>
-        <input type="text" id="search" name="search">
-        <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+    <div class="vertical-center">
+        <div class="search-wrapper">
+            <label for="search">Sök</label>
+            <input type="text" id="search" name="search">
+            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+        </div>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
