--- a/resafardtjanst.html
+++ b/resafardtjanst.html
@@ -43,10 +43,12 @@
             </nav>
         </div>
     </div>
-    <div class="search-wrapper vertical-center">
-        <label for="search">Sök</label>
-        <input type="text" id="search" name="search">
-        <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+    <div class="vertical-center">
+        <div class="search-wrapper">
+            <label for="search">Sök</label>
+            <input type="text" id="search" name="search">
+            <button id="search-button"><span id="icon-search" class="fa-solid fa-magnifying-glass"></span></button>
+        </div>
     </div>
     <div class="container-breadcrums vertical-center">
         <nav class="breadcrums">
@@ -115,9 +117,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
