--- a/bokaaterkommande.html
+++ b/bokaaterkommande.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="main-header vertical-center">
-            <h1>SOLNA FÄRDTJÄNST</h1>
+            <h1><a href="index.html">SOLNA FÄRDTJÄNST</a></h1>
             <div class="search-wrapper-header">
                 <label for="search-header" class="hidden-label">Sök</label>
                 <input class="search-input-header" type="text" id="search-header" name="search-header"
