styling kommanderesor + cancel

--- a/kommanderesorcancel.html
+++ b/kommanderesorcancel.html
@@ -50,48 +50,64 @@
         </div>
     </div>
     <h2 class="page-title">Mina kommande resor</h2>
-    <main>
+    <main class="kommanderesor-page">
         <div class="vertical-center">
-            <div class="container-cancel">
-                <section class="kommande-resa">
-                    <div class="confirmation-info">
-                        <div class="confirm-date">
-                            <span class="fa-solid fa-calendar-days"></span>
-                            <date>2025-12-31</date>
-                            <span class="fa-solid fa-clock"></span><time>Nu</time>
-                        </div>
-                        <div class="confirm-address">
-                            <span class="fa-solid fa-arrow-right"></span>
-                            <address>Armegatan 1</address>
-                            <span class="fa-solid fa-car"></span><span class="text">Rullstolstaxi</span>
-                        </div>
-                    </div>
-                    <p class="text-cancel">Resan är avbokad</p>
-                </section>
-            </div>
-
-            <section class="kommande-resa">
+            <div class="kommande-resa">
                 <div class="confirmation-info">
                     <div class="confirm-date">
-                        <span class="fa-solid fa-calendar-days"></span>
-                        <date>2025-12-31</date>
-                        <span class="fa-solid fa-clock"></span><time>Nu</time>
+                        <div class="date-flex">
+                            <span class="fa-solid fa-calendar-days"></span>
+                            <date>2025-12-31</date>
+                        </div>
+                        <div class="flex-time">
+                            <span class="fa-solid fa-clock"></span><time>Nu</time>
+                        </div>
                     </div>
                     <div class="confirm-address">
-                        <span class="fa-solid fa-arrow-right"></span>
-                        <address>Armegatan 1</address>
-                        <span class="fa-solid fa-car"></span><span class="text">Rullstolstaxi</span>
-                    </div>
-                    <div class="confirm-buttons">
-                        <div class="container-change">
-                            <a href="bokaresa.html">Ändra</a>
+                        <div class="flex-address">
+                            <span class="fa-solid fa-arrow-right"></span>
+                            <address>Armegatan 1</address>
                         </div>
-                        <div class="container-cancel">
-                            <a href="kommanderesorcancel.html">Avboka</a>
+                        <div class="flex-veichle booking-cancel">
+                            <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
+                        </div>
+                    </div>
+                    <div class="trip-cancel">
+                        <div class="trip-cancel-text">Resan är avbokad</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="kommande-resa">
+                <div class="confirmation-info">
+                    <div class="confirm-date">
+                        <div class="date-flex">
+                            <span class="fa-solid fa-calendar-days"></span>
+                            <date>2025-12-31</date>
+                        </div>
+                        <div class="flex-time">
+                            <span class="fa-solid fa-clock"></span><time>Nu</time>
+                        </div>
+                    </div>
+                    <div class="confirm-address">
+                        <div class="flex-address">
+                            <span class="fa-solid fa-arrow-right"></span>
+                            <address>Armegatan 1</address>
+                        </div>
+                        <div class="flex-veichle booking-cancel">
+                            <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
                         </div>
                     </div>
                 </div>
-            </section>
+                <div class="confirm-buttons">
+                    <div class="container-change">
+                        <a href="bokaresa.html" class="purple-button-small">Ändra</a>
+                    </div>
+                    <div class="container-cancel">
+                        <a href="kommanderesorcancel.html" class="red-button-small">Avboka</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
