--- a/kommanderesorcancel2.html
+++ b/kommanderesorcancel2.html
@@ -68,7 +68,7 @@
                             <span class="fa-solid fa-arrow-right"></span>
                             <address>Armegatan 1</address>
                         </div>
-                        <div class="flex-veichle">
+                        <div class="flex-veichle booking-cancel">
                             <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
                         </div>
                     </div>
@@ -82,7 +82,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="kommande-resa">
                 <div class="confirmation-info">
                     <div class="confirm-date">
@@ -99,17 +98,12 @@
                             <span class="fa-solid fa-arrow-right"></span>
                             <address>Armegatan 1</address>
                         </div>
-                        <div class="flex-veichle">
+                        <div class="flex-veichle booking-cancel">
                             <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
                         </div>
                     </div>
-                </div>
-                <div class="confirm-buttons">
-                    <div class="container-change">
-                        <a href="bokaresa.html" class="purple-button-small">Ändra</a>
-                    </div>
-                    <div class="container-cancel">
-                        <a href="kommanderesorcancel2.html" class="red-button-small">Avboka</a>
+                    <div class="trip-cancel">
+                        <div class="trip-cancel-text">Resan är avbokad</div>
                     </div>
                 </div>
             </div>
