fix kommanderesor cancel

--- a/kommanderesorcancel.html
+++ b/kommanderesorcancel.html
@@ -104,7 +104,7 @@
                         <a href="bokaresa.html" class="purple-button-small">Ändra</a>
                     </div>
                     <div class="container-cancel">
-                        <a href="kommanderesorcancel.html" class="red-button-small">Avboka</a>
+                        <a href="kommanderesorcancel2.html" class="red-button-small">Avboka</a>
                     </div>
                 </div>
             </div>
