validate html + fix

--- a/ansokfardtjanst.html
+++ b/ansokfardtjanst.html
@@ -72,8 +72,7 @@
                     En ansökan om tillstånd till färdtjänst sker i flera steg. Det gäller både om du ansöker för första
                     gången och om du ansöker om att förlänga ditt tillstånd till färdtjänst.
                 </p>
-                <p>
-                <ol>
+                <ol class="orderedlist-page">
                     <li>1. Ta kontakt med din läkare för att få ett läkarintyg för färdtjänst. Läkarintyget får inte
                         vara
                         äldre än 3 månader när du ansöker.</li>
@@ -94,7 +93,6 @@
                     <li>7. Färdtjänsten beslutar om du får färdtjänst eller inte och skickar hem ett beslutsbrev till
                         dig.</li>
                 </ol>
-                </p>
                 <p>
                     <strong>Om du fick tillstånd till färdtjänst kommer ditt personliga färdtjänstkort hem till dig med
                         post inom en vecka. Du kan inte resa med färdtjänst innan du har fått ditt
