--- a/avgiftfardtjanst.html
+++ b/avgiftfardtjanst.html
@@ -73,23 +73,24 @@
                     En resa med färdtjänst som är kortare än 3 mil kostar 86 kronor. Om resan är längre än 3 mil
                     tillkommer 86 kronor för varje påbörjad tremilssträcka. Dessa avgifter får du på faktura. Du betalar
                     för den planerade sträckan och inte för den sträcka som föraren kör.</p>
-                <ul>
+                <ul class="unorderedlist-page">
                     <li>0–3 mil = 86 kronor</li>
                     <li>3–6 mil = 172 kronor</li>
                     <li>6–9 mil = 258 kronor</li>
-                    <p>
-                        Du betalar för varje resa du gör upp till ditt högkostnadsskydd.
-                    </p>
+                </ul>
+                <p>
+                    Du betalar för varje resa du gör upp till ditt högkostnadsskydd.
+                </p>
 
-                    <h2>Avgift för att ta med en medresenär</h2>
-                    <p>
-                        Du som inte har tillstånd till ledsagare kan ta med dig en medresenär istället. Det kostar 40
-                        kronor extra per resa och den avgiften kommer på din faktura.</p>
-                    <p>
-                        Dessa avgifter ingår inte i ditt högkostnadsskydd för dina resor. Det finns ett eget
-                        högkostnadsskydd för medresenärsavgifterna. Det innebär att du betalar som mest 970 kronor eller
-                        650 kronor per faktura för medresenärsavgifterna.
-                    </p>
+                <h2>Avgift för att ta med en medresenär</h2>
+                <p>
+                    Du som inte har tillstånd till ledsagare kan ta med dig en medresenär istället. Det kostar 40
+                    kronor extra per resa och den avgiften kommer på din faktura.</p>
+                <p>
+                    Dessa avgifter ingår inte i ditt högkostnadsskydd för dina resor. Det finns ett eget
+                    högkostnadsskydd för medresenärsavgifterna. Det innebär att du betalar som mest 970 kronor eller
+                    650 kronor per faktura för medresenärsavgifterna.
+                </p>
             </section>
         </div>
     </main>
