--- a/contactform.html
+++ b/contactform.html
@@ -62,6 +62,7 @@
     <main>
         <div class="vertical-center">
             <section class="contact-form">
+                <h2 class="heading-hidden">Skicka din fråga till oss</h2>
                 <div class="form-contact">
                     <div class="form-contact-fname">
                         <label for="contact-fname">Förnamn</label><br>
