--- a/contactformconfirm.html
+++ b/contactformconfirm.html
@@ -62,14 +62,8 @@
     <main>
         <div class="vertical-center">
             <section>
-                <h2 class="heading-hidden">Formulär bekräftelse</h2>
-                <p>
-                    Tack så mycket!
-                </p>
-                <p>Din fråga är nu inskickad.</p>
-                <p>
-                    Vi återkommer till dig inom kort.
-                </p>
+                <h2>Tack så mycket</h2>
+                <p>Din fråga är nu inskickad och vi återkommer till dig inom kort.</p>
             </section>
         </div>
     </main>
