--- a/reglerfardtjanst.html
+++ b/reglerfardtjanst.html
@@ -73,41 +73,38 @@
                     Det finns regler för resor med färdtjänst i Stockholms län. Det är viktigt att du följer dem. Om du
                     inte följer reglerna kan vi begränsa hur du får beställa resor. Vi kan till och med dra in ditt
                     tillstånd till färdtjänst om du gör allvarliga fel.</p>
-                <p>
-                    Du som har färdtjänst måste
-                <ul>
+
+                    <h3>Du som har färdtjänst måste</h3>
+                <ul class="unorderedlist-page">
                     <li>vara på plats för att bli hämtad på överenskommen tid</li>
                     <li>följa förarens rekommendationer om att resa på ett säkert sätt</li>
                     <li>alltid vara med själv på de färdtjänstresor du beställer.</li>
                     <li>Du får inte enbart frakta varor eller hjälpmedel</li>
                     <li>låna ut ditt färdtjänstkort till någon annan.</li>
                 </ul>
-                </p>
                 <h3>Meddela oss om någonting ändras</h3>
                 <p>
                     Du ansvarar för att höra av dig till oss om något händer som påverkar ditt tillstånd till
                     färdtjänst eller dina färdtjänstresor.</p>
-                <p>
-                    Du måste tala om för oss om du
-                <ul>
+
+                    <h3>Du måste tala om för oss om du</h3>
+                <ul class="unorderedlist-page">
                     <li>inte längre behöver färdtjänst</li>
                     <li>inte längre har behov av extra resor, till exempel till arbete eller studier</li>
                     <li>inte längre behöver den typ av tillstånd till färdtjänst som du har, till exempel tillstånd för
                         ensamåkning.</li>
                 </ul>
-                </p>
                 <h3>Beställ och avbeställ resor på rätt sätt</h3>
                 <p>
                     Det finns några regler som du måste följa när du beställer resor med Färdtjänsten.
                 </p>
-                <ul>
+                <ul class="unorderedlist-page">
                     <li>Du får bara beställa resor via de beställningstjänster som Färdtjänsten erbjuder.</li>
                     <li>Du får inte beställa resor direkt av föraren.</li>
                     <li>Du får inte beställa så kallade fortsättningsresor, där du efter en resa åker vidare med samma
                         förare till en annan adress.</li>
                     <li>Du måste avbeställa resor som du inte tänker göra.</li>
                 </ul>
-                </p>
                 <h3>Om du inte följer reglerna</h3>
                 <p>
                     Om du bryter mot reglerna kan du bli skyldig att betala hela kostnaden för resan.</p>
