--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Kontrollera uppgifter - Solna färdtjänst</title>
 </head>
-
+<!--Fixa CSS + HTML - time date + heading saknas i section-->
 <body>
     <header>
         <div class="main-header vertical-center">
