--- a/fungerarfardtjanst.html
+++ b/fungerarfardtjanst.html
@@ -74,23 +74,21 @@
                     Här kan du läsa om vad som krävs för att få färdtjänst och vad som inte är tillräckliga skäl.
                 </p>
                 <h3>Vad krävs för att få tillstånd till färdtjänst?</h3>
-                <p>
-                    För att få tillstånd till färdtjänst måste du
-                <ul>
+                    <p>För att få tillstånd till färdtjänst finns krav som måste uppfyllas. Kraven kan se olika ut i respektive kommun.</p>
+                <h4>För att uppfylla kraven behöver du</h4>
+                    <ul class="unorderedlist-page">
                     <li>vara folkbokförd i en kommun i Stockholms län,</li>
                     <li>ha en funktionsnedsättning som varar i mer än 3 månader,</li>
                     <li>ha stora svårigheter att förflytta dig på egen hand eller att resa med kollektivtrafiken.</li>
                 </ul>
-                </p>
 
                 <h3>När kan du inte få tillstånd till färdtjänst?</h3>
                 <p>
                     Att du har en funktionsnedsättning eller en diagnos i sig är inte tillräckligt för att få tillstånd
                     till färdtjänst. Det är din förmåga att ta dig till eller resa med SL och Waxholmsbolaget som avgör.
                 </p>
-                <p>
-                    Du får inte färdtjänst enbart på grund av att
-                <ul>
+                <h4>Du får inte färdtjänst enbart på grund av att</h4>
+                <ul class="unorderedlist-page">
                     <li>det inte finns kollektivtrafik där du bor</li>
                     <li>kollektivtrafiken har gles trafik där du bor</li>
                     <li>du inte längre kan köra bil</li>
@@ -98,7 +96,7 @@
                     <li>du inte kan bära det du har köpt</li>
                     <li>du behöver komma fortare fram dit du ska</li>
                     <li>du behöver hjälp att ta dig till vård eller behandling</li>
-                    </p>
+                </ul>
             </section>
         </div>
     </main>
