--- a/accessibility.html
+++ b/accessibility.html
@@ -98,7 +98,7 @@
                 </p>
 
                 <h2>Innehåll som inte är tillgängligt</h2>
-                <ul>
+                <ul class="unorderedlist-page">
                     <li>Punktlista</li>
                     <li>Över innehåll</li>
                     <li>Som inte är</li>
