validate html + fix

--- a/kommanderesorcancel2.html
+++ b/kommanderesorcancel2.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Mina sidor - Solna färdtjänst</title>
 </head>
-<!--Fixa CSS + HTML - time date + heading saknas i section-->
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -57,10 +56,10 @@
                     <div class="confirm-date">
                         <div class="date-flex">
                             <span class="fa-solid fa-calendar-days"></span>
-                            <date>2025-12-31</date>
+                            <span>2025-12-31</span>
                         </div>
                         <div class="flex-time">
-                            <span class="fa-solid fa-clock"></span><time>Nu</time>
+                            <span class="fa-solid fa-clock"></span><span>Nu</span>
                         </div>
                     </div>
                     <div class="confirm-address">
@@ -87,10 +86,10 @@
                     <div class="confirm-date">
                         <div class="date-flex">
                             <span class="fa-solid fa-calendar-days"></span>
-                            <date>2025-12-31</date>
+                            <span>2025-12-31</span>
                         </div>
                         <div class="flex-time">
-                            <span class="fa-solid fa-clock"></span><time>Nu</time>
+                            <span class="fa-solid fa-clock"></span><span>Nu</span>
                         </div>
                     </div>
                     <div class="confirm-address">
