--- a/confirmbokaaterkommande.html
+++ b/confirmbokaaterkommande.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Kontrollera uppgifter - Solna färdtjänst</title>
 </head>
-<!--Fixa CSS + HTML - time date + heading saknas i section-->
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -50,38 +49,46 @@
         </div>
     </div>
     <h2 class="page-title">Kontrollera uppgifter</h2>
-    <main>
+    <main class="kommanderesor-page">
         <div class="vertical-center">
-            <section class="confirm-bokaresa">
+            <div class="kommande-resa">
                 <div class="confirmation-info">
                     <div class="confirm-date">
-                        <span class="fa-solid fa-calendar-days"></span>
-                        <date>2025-12-31</date>
-                        <span class="fa-solid fa-clock"></span><time>Nu</time>
+                        <div class="date-flex">
+                            <span class="fa-solid fa-calendar-days"></span>
+                            <span>2025-12-31</span>
+                        </div>
+                        <div class="flex-time">
+                            <span class="fa-solid fa-clock"></span><span>Nu</span>
+                        </div>
                     </div>
                     <div class="confirm-address">
-                        <span class="fa-solid fa-arrow-right"></span>
-                        <address>Armegatan 1</address>
-                        <span class="fa-solid fa-car"></span><span class="text">Rullstolstaxi</span>
-                    </div>
-                    <div class="confirm-others">
-                        <br><span class="text">Hur ofta: Varannan vecka</span><br>
-                        <span class="text">Veckodag: Måndag, tisdag</span><br><br>
-                        <span class="text">Slutdatum: 2026-02-08</span><br><br>
-                        <span class="text">Medresenärer: 0</span><br>
-                        <span class="text">Övrig information</span><br><br><br>
-                    </div>
-                    <div class="confirm-buttons">
-                        <div class="container-confirm-trip">
-                            <a href="confirmedbokaaterkommande.html" class="purple-button">Bekräfta bokning</a>
+                        <div class="flex-address">
+                            <span class="fa-solid fa-arrow-right"></span>
+                            <address>Armegatan 1</address>
                         </div>
-                        <div class="container-back">
-                            <span class="fa-solid fa-circle-arrow-left"></span>
-                            <a href="bokaaterkommande.html" class="purple-button">Tillbaka</a>
+                        <div class="flex-veichle">
+                            <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
+                        </div>
+                        <div class="confirm-others">
+                            <br><span class="text">Hur ofta: Varannan vecka</span><br>
+                            <span class="text">Veckodag: Måndag, tisdag</span><br><br>
+                            <span class="text">Slutdatum: 2026-02-08</span><br><br>
+                            <span class="text">Medresenärer: 0</span><br>
+                            <span class="text">Övrig information</span><br><br><br>
                         </div>
                     </div>
                 </div>
-            </section>
+
+                <div class="confirm-buttons-big">
+                    <div class="container-confirm-trip">
+                        <a href="confirmedbokaaterkommande.html" class="purple-button">Bekräfta bokning</a>
+                    </div>
+                    <div class="container-back">
+                        <a href="bokaaterkommande.html" class="purple-button"><span class="fa-solid fa-circle-arrow-left"></span> Tillbaka</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
@@ -99,9 +106,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
