--- a/confirmedbokaaterkommande.html
+++ b/confirmedbokaaterkommande.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <title>Bokningsbekräftelse - Solna färdtjänst</title>
 </head>
-<!--Fixa CSS + HTML - time date + heading saknas i section-->
 <body>
     <header>
         <div class="main-header vertical-center">
@@ -50,34 +49,44 @@
         </div>
     </div>
     <h2 class="page-title">Bokningsbekräftelse</h2>
-    <main>
+        <main class="kommanderesor-page">
         <div class="vertical-center">
-            <section class="confirm-bokaresa">
+            <div class="kommande-resa">
                 <div class="confirmation-info">
                     <div class="confirm-date">
-                        <span class="fa-solid fa-calendar-days"></span>
-                        <date>2025-12-31</date>
-                        <span class="fa-solid fa-clock"></span><time>Nu</time>
-                    </div>
-                    <div class="confirm-address">
-                        <span class="fa-solid fa-arrow-right"></span>
-                        <address>Armegatan 1</address>
-                        <span class="fa-solid fa-car"></span><span class="text">Rullstolstaxi</span>
-                    </div>
-                    <div class="confirm-others">
-                        <br><span class="text">Hur ofta: Varannan vecka</span><br>
-                        <span class="text">Veckodag: Måndag, tisdag</span><br><br>
-                        <span class="text">Slutdatum: 2026-02-08</span><br><br>
-                        <span class="text">Medresenärer: 0</span><br>
-                        <span class="text">Övrig information</span><br><br><br><br><br><br><br>
-                        <span class="text-aterkommande">Du kan se dina resor under Mina kommande resor</span><br><br>
-                    </div>
-                    <div class="confirm-buttons">
-                        <div class="container-confirm-mypages">
-                            <a href="mypages.html"  class="purple-button">Mina sidor</a>
+                        <div class="date-flex">
+                            <span class="fa-solid fa-calendar-days"></span>
+                            <span>2025-12-31</span>
+                        </div>
+                        <div class="flex-time">
+                            <span class="fa-solid fa-clock"></span><span>Nu</span>
                         </div>
                     </div>
-            </section>
+                    <div class="confirm-address">
+                        <div class="flex-address">
+                            <span class="fa-solid fa-arrow-right"></span>
+                            <address>Armegatan 1</address>
+                        </div>
+                        <div class="flex-veichle">
+                            <span class="fa-solid fa-car"></span><span class="text"> Rullstolstaxi</span>
+                        </div>
+                        <div class="confirm-others">
+                            <br><span class="text">Hur ofta: Varannan vecka</span><br>
+                            <span class="text">Veckodag: Måndag, tisdag</span><br><br>
+                            <span class="text">Slutdatum: 2026-02-08</span><br><br>
+                            <span class="text">Medresenärer: 0</span><br>
+                        <span class="text">Övrig information</span><br><br><br><br><br><br><br>
+                        <span class="text-aterkommande">Du kan se dina resor under Mina kommande resor</span><br><br>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="confirm-buttons-big">
+                    <div class="container-confirm-trip">
+                        <a href="mypages.html" class="purple-button">Mina sidor</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
