--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -28,7 +28,7 @@
                     <span id="icon-menu" class="fa-solid fa-bars" aria-hidden="true"></span>
                 </a>
                 <div class="user">
-                    <a href="logon.html"><span id="icon-user" class="fa-solid fa-user"></span> Logga in</a>
+                    <a href="myprofile.html"><span id="icon-user" class="fa-solid fa-user"></span> Min profil</a>
                 </div>
             </div>
             <nav class="main-nav mypages-nav">
